--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "scripts": {
-    "build": "next build",
+    "build": "prisma generate && next build",
     "dev": "next dev",
     "start": "next start",
     "format": "prettier --write .",
