--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,11 @@
   },
   "include": [
     "next-env.d.ts",
+    "*.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "prisma/seed.ts"
+    "prisma/seed.ts",
   ],
   "exclude": ["node_modules"]
 }
